--- a/WebRoot/WEB-INF/views/blog/index.html
+++ b/WebRoot/WEB-INF/views/blog/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0021)https://www.v2ex.com/ -->
-<html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta charset="UTF-8">
-	<meta content="True" name="HandheldFriendly">
+<html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+	<meta content="True" name="HandheldFriendly"/>
 	
-    <meta name="detectify-verification" content="d0264f228155c7a1f72c3d91c17ce8fb">
-<meta name="alexaVerifyID" content="OFc8dmwZo7ttU4UCnDh1rKDtLlY">
-<meta name="baidu-site-verification" content="D00WizvYyr">
-<meta name="msvalidate.01" content="D9B08FEA08E3DA402BF07ABAB61D77DE">
-<meta property="wb:webmaster" content="f2f4cb229bda06a4">
-<meta name="google-site-verification" content="LM_cJR94XJIqcYJeOCscGVMWdaRUvmyz6cVOqkFplaU">
+    <meta name="detectify-verification" content="d0264f228155c7a1f72c3d91c17ce8fb"/>
+<meta name="alexaVerifyID" content="OFc8dmwZo7ttU4UCnDh1rKDtLlY"/>
+<meta name="baidu-site-verification" content="D00WizvYyr"/>
+<meta name="msvalidate.01" content="D9B08FEA08E3DA402BF07ABAB61D77DE"/>
+<meta property="wb:webmaster" content="f2f4cb229bda06a4"/>
+<meta name="google-site-verification" content="LM_cJR94XJIqcYJeOCscGVMWdaRUvmyz6cVOqkFplaU"/>
     
-    <title>V2EX</title>
+    <title/>V2EX</title/>
     
-	   <link rel="stylesheet" type="text/css" media="screen" href="./../../index/basic.css">
+	   <link rel="stylesheet" type="text/css" media="screen" href="./../../index/basic.css"/>
     
-    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/style.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/desktop.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/highlight.css">
-    <link rel="shortcut icon" href="https://www.v2ex.com/static/img/icon_rayps_64.png" type="image/png">
-    <link rel="apple-touch-icon" href="https://www.v2ex.com/static/apple-touch-icon.png">
-    <link rel="stylesheet" type="text/css" href="./../../index/font-awesome.min.css">
-	<script async="" src="./../../index/analytics.js"></script><script src="./../../index/jquery.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/desktop.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./../../index/highlight.css"/>
+    <link rel="shortcut icon" href="https://www.v2ex.com/static/img/icon_rayps_64.png" type="image/png"/>
+    <link rel="apple-touch-icon" href="https://www.v2ex.com/static/apple-touch-icon.png"/>
+    <link rel="stylesheet" type="text/css" href="./../../index/font-awesome.min.css"/>
+	<script async="" src="./../../index/analytics.js"/></script/><script src="./../../index/jquery.js" type="text/javascript"></script>
 	<script src="./../../index/jquery-ui.js" type="text/javascript"></script>
 	<script src="./../../index/jquery.autosize.js" type="text/javascript"></script>
     <link href="https://www.v2ex.com/static/css/jquery.textcomplete.css?v=5a041d39010ded8724744170cea6ce8d" rel="stylesheet">
